<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="@string/status_hint" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/create_table_bttn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/step1" />

        <Button android:id="@+id/btnShowLocation" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Location"
        
        />
        <Button
            android:id="@+id/insert_users_bttn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/step2" />

        <Button
            android:id="@+id/list_users_bttn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/step3" />

        <Button
            android:id="@+id/delete_table_bttn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/step4" />
        
        <Button
        android:paddingTop="10dp"
        android:id="@+id/GetWeatherData"
        android:text="@string/weather"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
    /> 
    </LinearLayout>

</LinearLayout>
